# worldcup-2026-prediction

./: .env.example  .gitignore  README.md  changelog.md  main.py  pyproject.toml  run_backtests.py  showcase.md  sweep_thresholds.py
.streamlit/: config.toml
competitions/datacamp/: datacamp_predictions.py
competitions/drw/: client.ipynb  set2_fair_values.csv
competitions/jumpcup/: __init__.py  const.py  event_pricer.py  event_rates.py  fetch.py  jump-probability-cup.md  predict.py
dashboard/: app.py  common.py  hdc_ev.py  match_probs.py
data/cleaned/: attack_strength.json  baseline_params.csv  baseline_params_pretuning.csv  defense_strength.json  filtered_matches.csv  groups_avg_elo.csv  matches.csv  matches_with_elo.csv  nested_params.csv  sparse_teams.txt  third_place_bracket_map.csv  wc26_groupstage_matches.csv  wc26_knockout_matches.csv  wc26_teams.csv
data/raw/: elo_historical.csv  elo_latest.csv  (+6 more)
datacamp/: datacamp_predictions.py
docs/: README_idea.md  artifacts.md  current-plan.md  development_plan.md  hdc_pricing.md  live_scorecard.md  roadmap.md
drw/: contract-specs.md  trading_client.py
jumpcup/: __init__.py  const.py  event_pricer.py  event_rates.py  fetch.py  jump-probability-cup.md  predict.py
model/: evaluation.py  glm.py  probabilities.py  rates.py  validation.py
notebooks/: data_exploration.ipynb
src/: backtest.py  backtest_data.py  brackets.py  bzzoiro.py  charts.py  cli.py  const.py  data_preprocess.py  forecast.py  hkjc.py  ledger.py  projections.py  report.py  scoring.py  scraper.py  showcase.py  simulation.py  surprises.py
(+31 files in other folders)
