[project]
name = "worldcup-2026-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pytest-playwright>=0.8.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "selenium>=4.44.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "webdriver-manager>=4.0.2",
]
